# fontsync

./: AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
packaging/: fontsync.service
packaging/arch/: PKGBUILD  PKGBUILD.in
packaging/linux/: fontsync.desktop
packaging/windows/: fontsync.manifest  fontsync.rc
src/: client.rs  font_installer.rs  font_monitor.rs  gui.rs  main.rs  server.rs  utils.rs  websocket_client.rs  websocket_server.rs
