[package]
name = "fontsync"
version = "0.1.0"
edition = "2024"
description = "Font synchronization tool with HTTP server and client"
authors = ["Your Name"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
futures = "0.3"
bytes = "1.0"
mime = "0.3"
mime_guess = "2.0"
walkdir = "2.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.0"
dirs = "5.0"
notify = "6.0"
sha2 = "0.10"
tungstenite = "0.20"
tokio-tungstenite = "0.20"
futures-channel = "0.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"
dialoguer = "0.11"
console = "0.15"
rand = "0.8"
hex = "0.4"
chrono = "0.4"
base64 = "0.21"
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1.0", features = ["v4"] }
tray-item = { version = "0.10.0", features = ["ksni"] }

[features]
default = ["gui"]
gui = ["fltk"]

[dependencies.fltk]
version = "1.4"
optional = true
features = ["fltk-bundled"]
