[package]
name = "fontsync"
version = "0.1.0"
edition = "2024"
description = "Font synchronization tool with HTTP server and client"
authors = ["Your Name"]
license = "AGPL-3.0-only"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
futures = "0.3"
bytes = "1.0"
mime = "0.3"
mime_guess = "2.0"
walkdir = "2.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.0"
dirs = "5.0"
notify = "6.0"
sha2 = "0.10"
tungstenite = "0.20"
tokio-tungstenite = "0.20"
futures-channel = "0.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"
dialoguer = "0.11"
console = "0.15"
rand = "0.8"
hex = "0.4"
chrono = "0.4"
base64 = "0.21"
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1.0", features = ["v4"] }
[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10.0", features = ["ksni"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-item = "0.10.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation"] }

[features]
default = ["gui"]
gui = ["fltk"]

[dependencies.fltk]
version = "1.4"
optional = true
features = ["fltk-bundled"]

[package.metadata.deb]
section = "utils"
priority = "optional"
maintainer = "FontSync <noreply@example.com>"
assets = [
  ["target/release/fontsync", "usr/bin/fontsync", "755"],
  ["packaging/linux/fontsync.desktop", "usr/share/applications/fontsync.desktop", "644"],
  ["packaging/linux/fontsync.svg", "usr/share/icons/hicolor/scalable/apps/fontsync.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/fontsync", dest = "/usr/bin/fontsync", mode = "755" },
  { source = "packaging/linux/fontsync.desktop", dest = "/usr/share/applications/fontsync.desktop", mode = "644" },
  { source = "packaging/linux/fontsync.svg", dest = "/usr/share/icons/hicolor/scalable/apps/fontsync.svg", mode = "644" },
]
